--- a/src/app/components/breadcrumbs/breadcrumbs.component.scss
+++ b/src/app/components/breadcrumbs/breadcrumbs.component.scss
@@ -6,8 +6,8 @@ a:visited { color: #eee; }
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* Internet Explorer 10+ */
   -webkit-overflow-scrolling: touch; /* Smooth momentum scrolling on iOS */
-  mask-image: linear-gradient(to right, transparent 0, black 8px, black calc(100% - 24px), transparent 100%);
-  -webkit-mask-image: linear-gradient(to right, transparent 0, black 8px, black calc(100% - 24px), transparent 100%);
+  mask-image: linear-gradient(to right, black 0, black calc(100% - 24px), transparent 100%);
+  -webkit-mask-image: linear-gradient(to right, black 0, black calc(100% - 24px), transparent 100%);
 }
 
 .crumb-holder::-webkit-scrollbar { /* WebKit */
